--- a/MidiFXTemplate/MidiFXTemplate/CMakeLists.txt
+++ b/MidiFXTemplate/MidiFXTemplate/CMakeLists.txt
@@ -6,7 +6,7 @@ juce_add_plugin("${BaseTargetName}"
         # VERSION ...                               # Set this if the plugin version is different to the project version
         # ICON_BIG ...                              # ICON_* arguments specify a path to an image file to use as an icon for the Standalone
         # ICON_SMALL ...
-        COMPANY_NAME "BEHZADHAKI"
+        COMPANY_NAME "MTG"
         IS_SYNTH TRUE
         NEEDS_MIDI_INPUT TRUE
         NEEDS_MIDI_OUTPUT TRUE
