Seperated Models_API.h into two separate .h/.cpp files (MonotonicGrooVETransformerv1.h/cpp)

--- a/Groove2Drum/Groove2Drum/CMakeLists.txt
+++ b/Groove2Drum/Groove2Drum/CMakeLists.txt
@@ -20,7 +20,8 @@ juce_add_plugin("${BaseTargetName}"
 
 target_sources(${BaseTargetName} PRIVATE
         Source/PluginProcessor.cpp
-        Source/PluginEditor.cpp)
+        Source/PluginEditor.cpp
+        Source/MonotonicGrooveTransformerV1.cpp)
 
 target_compile_definitions(${BaseTargetName}
         PUBLIC
