--- a/Groove2Drum/Groove2Drum/CMakeLists.txt
+++ b/Groove2Drum/Groove2Drum/CMakeLists.txt
@@ -21,7 +21,8 @@ juce_add_plugin("${BaseTargetName}"
 target_sources(${BaseTargetName} PRIVATE
         Source/PluginProcessor.cpp
         Source/PluginEditor.cpp
-        Source/MonotonicGrooveTransformerV1.cpp)
+        Source/model/ModelAPI.cpp
+        Source/gui/CustomGuiTextEditors.cpp)
 
 target_compile_definitions(${BaseTargetName}
         PUBLIC
