Implemented the dtype and queue for sending MidiBuffer and Playhead over to BackgroundMidiBufferProcessorThread

--- a/Groove2Drum/Groove2Drum/CMakeLists.txt
+++ b/Groove2Drum/Groove2Drum/CMakeLists.txt
@@ -21,7 +21,7 @@ juce_add_plugin("${BaseTargetName}"
 target_sources(${BaseTargetName} PRIVATE
         Source/PluginProcessor.cpp
         Source/PluginEditor.cpp
-        Source/model/ModelAPI.cpp
+        Source/Model/ModelAPI.cpp
         Source/gui/CustomGuiTextEditors.cpp)
 
 target_compile_definitions(${BaseTargetName}
