Model Thread Implemented!!

--- a/Groove2Drum/Groove2Drum/CMakeLists.txt
+++ b/Groove2Drum/Groove2Drum/CMakeLists.txt
@@ -23,7 +23,8 @@ target_sources(${BaseTargetName} PRIVATE
         Source/PluginEditor.cpp
         Source/Model/ModelAPI.cpp
         Source/gui/CustomGuiTextEditors.cpp
-        Source/ProcessingThreads/GrooveThread.cpp)
+        Source/ProcessingThreads/GrooveThread.cpp
+        Source/ProcessingThreads/ModelThread.cpp)
 
 target_compile_definitions(${BaseTargetName}
         PUBLIC
