Model Thread Implemented!! Improved Comments and code

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ Makefile
 workspace.xml
 xcuserdata
 /Apps/SerumStandAlone/Builds/MacOSX/RecentFilesMenuTemplate.nib
+/Groove2Drum/Groove2Drum/Documentations/.$ProcessDiagram.drawio.bkp
