libtorch_setup.cmake added
Allows for automatic downloading and setup of libtorch

--- a/Groove2Drum/Groove2Drum/CMakeLists.txt
+++ b/Groove2Drum/Groove2Drum/CMakeLists.txt
@@ -3,45 +3,48 @@ project(Groove2DrumFX VERSION 0.0.1)
 set (BaseTargetName Groove2DrumFX)
 
 juce_add_plugin("${BaseTargetName}"
-        # VERSION ...                               # Set this if the plugin version is different to the project version
-        # ICON_BIG ...                              # ICON_* arguments specify a path to an image file to use as an icon for the Standalone
-        # ICON_SMALL ...
-        COMPANY_NAME "BehzadHaki"
-        IS_SYNTH TRUE
-        NEEDS_MIDI_INPUT TRUE
-        NEEDS_MIDI_OUTPUT TRUE
-        AU_MAIN_TYPE kAudioUnitType_MIDIProcessor
-        EDITOR_WANTS_KEYBOARD_FOCUS FALSE
-        COPY_PLUGIN_AFTER_BUILD TRUE
-        PLUGIN_MANUFACTURER_CODE Juce
-        PLUGIN_CODE MFxt
-        FORMATS AU VST3 Standalone
-        PRODUCT_NAME "Groove2Drum")
+# VERSION ...                               # Set this if the plugin version is different to the project version
+# ICON_BIG ...                              # ICON_* arguments specify a path to an image file to use as an icon for the Standalone
+# ICON_SMALL ...
+COMPANY_NAME "BehzadHaki"
+IS_SYNTH TRUE
+NEEDS_MIDI_INPUT TRUE
+NEEDS_MIDI_OUTPUT TRUE
+AU_MAIN_TYPE kAudioUnitType_MIDIProcessor
+EDITOR_WANTS_KEYBOARD_FOCUS FALSE
+COPY_PLUGIN_AFTER_BUILD TRUE
+PLUGIN_MANUFACTURER_CODE Juce
+PLUGIN_CODE MFxt
+FORMATS AU VST3 Standalone
+PRODUCT_NAME "Groove2Drum")
 
 # Include the libtorch setup file
 include(libtorch_setup.cmake)
 
 target_sources(${BaseTargetName} PRIVATE
-        Source/PluginProcessor.cpp
-        Source/PluginEditor.cpp
-        Source/Model/ModelAPI.cpp
-        Source/gui/CustomGuiTextEditors.cpp
-        Source/ProcessorThreads/GrooveThread.cpp
-        Source/ProcessorThreads/ModelThread.cpp)
+Source/PluginProcessor.cpp
+Source/PluginEditor.cpp
+Source/Model/ModelAPI.cpp
+Source/gui/CustomGuiTextEditors.cpp
+Source/ProcessorThreads/GrooveThread.cpp
+Source/ProcessorThreads/ModelThread.cpp)
 
 target_compile_definitions(${BaseTargetName}
-        PUBLIC
-        JUCE_WEB_BROWSER=0
-        JUCE_USE_CURL=0
-        JUCE_VST3_CAN_REPLACE_VST2=0)
+PUBLIC
+JUCE_WEB_BROWSER=0
+JUCE_USE_CURL=0
+JUCE_VST3_CAN_REPLACE_VST2=0)
 
 find_package(Torch REQUIRED)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
 
 target_link_libraries(${BaseTargetName} PRIVATE
-        shared_plugin_helpers
-        juce_recommended_config_flags
-        juce_recommended_lto_flags
-        juce_recommended_warning_flags
-        ${TORCH_LIBRARIES}
-        )
+shared_plugin_helpers
+juce_recommended_config_flags
+juce_recommended_lto_flags
+juce_recommended_warning_flags
+${TORCH_LIBRARIES}
+)
+
+# Add libtorch headers to the include directories
+target_include_directories(${BaseTargetName} PRIVATE "${TORCH_INCLUDE_DIRS}")
