Latest Version Merged From v3 with Raul

--- a/Groove2Drum/Groove2Drum/CMakeLists.txt
+++ b/Groove2Drum/Groove2Drum/CMakeLists.txt
@@ -2,6 +2,9 @@ project(Groove2DrumFX VERSION 0.0.1)
 
 set (BaseTargetName Groove2DrumFX)
 
+# Include the libtorch setup file
+include(libtorch_setup.cmake)
+
 juce_add_plugin("${BaseTargetName}"
 # VERSION ...                               # Set this if the plugin version is different to the project version
 # ICON_BIG ...                              # ICON_* arguments specify a path to an image file to use as an icon for the Standalone
@@ -18,8 +21,6 @@ PLUGIN_CODE MFxt
 FORMATS AU VST3 Standalone
 PRODUCT_NAME "Groove2Drum")
 
-# Include the libtorch setup file
-include(libtorch_setup.cmake)
 
 target_sources(${BaseTargetName} PRIVATE
         Source/PluginProcessor.cpp
@@ -31,13 +32,23 @@ target_sources(${BaseTargetName} PRIVATE
         Source/ProcessorThreads/ModelThread.cpp)
 
 target_compile_definitions(${BaseTargetName}
-PUBLIC
-JUCE_WEB_BROWSER=0
-JUCE_USE_CURL=0
-JUCE_VST3_CAN_REPLACE_VST2=0)
+        PUBLIC
+        JUCE_WEB_BROWSER=0
+        JUCE_USE_CURL=0
+        JUCE_VST3_CAN_REPLACE_VST2=0)
 
 find_package(Torch REQUIRED)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
+
+
+if (MSVC)
+    file(GLOB TORCH_DLLS "${TORCH_INSTALL_PREFIX}/lib/*.dll")
+    add_custom_command(TARGET ${BaseTargetName}
+            POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            ${TORCH_DLLS}
+            $<TARGET_FILE_DIR:${BaseTargetName}>)
+endif()
 
 target_link_libraries(${BaseTargetName} PRIVATE
 shared_plugin_helpers
